kubernetes-demo/api-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-api
  namespace: default
  labels:
    app: synergychat-api
spec:
  selector:
    matchLabels:
      app: synergychat-api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: synergychat-api
      labels:
        app: synergychat-api
    spec:
      containers:
        - name: synergychat-api
          image: bootdotdev/synergychat-api:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: synergychat-api-volume
              mountPath: /persist
      volumes:
        - name: synergychat-api-volume
          persistentVolumeClaim:
            claimName: synergychat-api-pvc
---
