kubernetes-demo/api-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: synergychat-api
  ports:
    - name: api-service
      protocol: TCP
      port: 80
      targetPort: 8080
---
