kubernetes-demo/crawler-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler
  ports:
    - name: crawler-service
      protocol: TCP
      port: 80
      targetPort: 8080
---
