kubernetes-demo/web-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
spec:
  selector:
    app: synergychat-web
  ports:
    - name: web-service
      protocol: TCP
      port: 80
      targetPort: 8080
---
